<resources>
    <string name="app_name">FragmentDices</string>
    <string name="game_mode">Escoja el modo de juego</string>
    <string name="one_player">Un jugador</string>
    <string name="two_players">Dos Jugadores</string>
    <string name="player1">Jugador 1</string>
    <string name="player2">Jugador 2</string>
    <string name="playerAI">Máquina</string>
    <string name="initialScore">0</string>
    <string name="acumulatedScoreString">Acumulado en el turno:</string>
    <string name="roll">Tirar</string>
    <string name="saveScore">Recoger</string>
    <string name="win1">Gana el Jugador 1</string>
    <string name="win2">Gana el Jugador 2</string>
    <string name="winMachine">Gana la IA</string>
    <string name="playAgain">¿Desea volver a jugar?</string>
    <string name="positiveButton">Si</string>
    <string name="negativeButton">No</string>
    <string name="startP1">Comienza el turno el Jugador 1</string>
    <string name="startP2">Comienza el turno el Jugador 2</string>
    <string name="startMachine">Comienza el turno la IA</string>
</resources>
