<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="1">

    <TextView
        android:id="@+id/menu_message"
        android:text="@string/game_mode"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center"
        android:layout_row="0"
        android:layout_marginBottom="@dimen/menu_message_bottom_margin"/>
    <Button
        android:id="@+id/one_player"
        android:text="@string/one_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/two_players"
        android:text="@string/two_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_gravity="center"/>
</GridLayout>