<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="2"
    android:layout_gravity="center"
    android:layout_row="4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/space_between_elements"
        android:layout_row="0"
        android:text="@string/player1" />

    <Button
        android:id="@+id/startTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/space_between_elements"
        android:layout_row="2"
        android:text="@string/startP1" />

    <Button
        android:id="@+id/rollDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/roll" />


    <Button
        android:id="@+id/takeScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="3"
        android:text="@string/saveScore" />

    <TextView
        android:id="@+id/acumulatedScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/space_between_elements"
        android:layout_row="1" />

</GridLayout>